# omicspylib

./: .gitignore  .pylintrc  .readthedocs.yaml  README.md  dev_requirements.txt  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml  python-nightly-tests.yml
docs/: apireference.rst  conf.py  index.rst  install.rst  quickstart.rst  requirements.txt  tutorials.rst
docs/api/: calculations.rst  comparisons.rst  datasets.rst  plots.rst  utils.rst
docs/api/calculations/: index.rst
docs/notebooks/: hierrarchically-clustered-heatmap.ipynb  peptide-level-normalization-across-experiments.ipynb  peptides-to-proteins-dataset-conversion.ipynb  proteins-dataset-pairwise-comparison.ipynb
docs/source/: conf.py  index.rst
examples/: proteins-dataset-pairwise-comparison.ipynb
omicspylib/: __init__.py
omicspylib/analysis/: clusters.py
omicspylib/calculations/: __init__.py  fold_change.py  ttest.py
omicspylib/comparisons/: pairwise.py  unique.py
omicspylib/datasets/: abc.py  concat.py  peptides.py  proteins.py
omicspylib/go/: goslim.py
omicspylib/plots/: __init__.py  density.py  missing_values.py  venn.py  volcano.py
omicspylib/utils/: __init__.py  mq.py
tests/: conftest.py  test_dataset_transformations.py  test_protein_dataset_creation.py
tests/data/: peptides_dataset.tsv  protein_dataset.tsv  protein_dataset_mq.tsv
tests/test_calculations/: test_fold_change.py  test_ttest_calulations.py
tests/test_comparisons/: test_clustering.py  test_pairwise_comparisons.py
tests/test_ebml_api/: test_goslim_conversion.py
(+35 files in other folders)
